fix the white space property

--- a/OsloMetParent/styles/backend.less
+++ b/OsloMetParent/styles/backend.less
@@ -28,8 +28,11 @@ html .pkp_nav_context .pkp_contexts a {
     display: block;
     text-overflow: unset;
     overflow-x: unset;
-    white-space: normal;
     padding:.5em 1em;
+}
+
+#navigationContextMenu .pkp_contexts a {
+    white-space: normal;
 }
 html .pkp_nav_context [aria-expanded="true"] .pkp_contexts {
     box-shadow: 1px 1px 0px black;
